# core

./: .gitignore  CHANGELOG.md  FRACTARY_FILES_INDEX.md  FRACTARY_INIT_SUMMARY.txt  FRACTARY_SETUP.md  GITHUB_TOKEN_SETUP.md  QUICK_START.txt  README.md  codex.md  package.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: worktree-create.sh
.cursor/rules/: fractary.mdc
.fractary/: .gitignore  config.yaml  post-merge-actions.md
.husky/: pre-commit
.opencode/: package.json
cli/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
doc-types/: manifest.yaml
docs/: MIGRATION-PLAN.md  README.md  V2-DOCUMENTATION-STATUS.md  analysis-spec-vs-docs-plugin.md  getting-started.md  plan-merge-spec-into-docs.md
scripts/: bump-versions.js  bump-versions.test.js  convert-commands-to-skills.js  migrate-file-plugin-v2.sh  validate-context-support.sh
sdk/py/: README.md  pyproject.toml  setup.py
sdk/py/fractary_core/: __init__.py
sdk/py/fractary_core/common/: __init__.py  config.py  yaml_config.py
sdk/py/fractary_core/docs/: __init__.py  manager.py
sdk/py/fractary_core/file/: __init__.py  manager.py
sdk/py/fractary_core/logs/: __init__.py
sdk/py/fractary_core/repo/: __init__.py  manager.py
sdk/py/fractary_core/spec/: __init__.py
sdk/py/fractary_core/spec/templates/: __init__.py
sdk/py/fractary_core/work/: __init__.py  manager.py
sdk/py/fractary_core/work/providers/: base.py  github.py
sdk/py/tests/: test_smoke.py  test_yaml_config.py
specs/: SPEC-00031-REPO-ENHANCEMENTS-IMPLEMENTATION.md  SPEC-20251216185457-core-cli-migration.md  SPEC-20251217094043-core-mcp-server-implementation.md  SPEC-20251217202523-plugin-v3-architecture.md  SPEC-20251228-issue-refine-command.md  SPEC-20251229-context-argument-support.md  SPEC-20260105-unified-yaml-config-migration.md  SPEC-20260108-bulk-issue-creation.md
(+1155 files in other folders)
